--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Nathan的个人主页</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -119,19 +119,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>我喜欢的</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>最近在读</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>都是好书</h6>
           <p>《梦室》《树民》《愤怒的葡萄》《西西弗神话》</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>最近在看</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>值得一看</h6>
           <p>《我心狂野》《哭泣的草原》《春风沉醉的夜晚》《养家之人》</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>最近在玩</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>请您来玩</h6>
           <p>《Hades》《最终幻想14》《红弦俱乐部》《弹丸论破》</p><br>
         </div>
       </div>
