--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Nathan的个人主页</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
+         <img src="https://imgse.com/i/ppyRtcn" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Nathan Wu</h2>
           </div>
@@ -64,26 +64,18 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <p>排球少年</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
               <div class="w3-center w3-text-white">永远喜欢小排球！</div>
             </div>
           </div>
           <p>全职猎人</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:65%">爱看热血少年漫</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">正在看！喜欢热血少年漫</div>
           </div>
           <p>JOJO的奇妙冒险</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:55%">只看了两部但同人搞了十年</div>
-          </div>
-          <p>光与夜之恋</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:45%">鹅厂是抄得很有水平的……</div>
-          </div>
-          <p>时空中的绘旅人</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">网易最后的良心</div>
-          </div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">只看了两部但同人搞了十年</div>
+            </div>
           <br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>多语言学习者统治世界！</b></p>
@@ -119,25 +111,25 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>我喜欢的</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>最近在读</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>都是好书</h6>
           <p>《梦室》《树民》《愤怒的葡萄》《西西弗神话》</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>最近在看</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>值得一看</h6>
           <p>《我心狂野》《哭泣的草原》《春风沉醉的夜晚》《养家之人》</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>最近在玩</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>请您来玩</h6>
           <p>《Hades》《最终幻想14》《红弦俱乐部》《弹丸论破》</p><br>
         </div>
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>放一点我的代表作吧！</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>放一点我写的吧！</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>《春日好还乡》</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020.03</h6>
@@ -159,7 +151,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>《断尾》</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022.0.</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022.03</h6>
           <p>刚上高三那会儿，我的日子只能算过得一般紧张，可以坐在学校新修葺的图书馆里看加缪传记，也可以晚饭后花二十分钟和朋友一起在操场上走路。当时天还不是太冷，树木尚且保持着完整的形貌，十一月的月亮在深蓝色的傍晚就像一个美丽的幽灵。那时候我每天中午都会看一点对应试不起作用的书，看得最多的是那些有关布雷顿角的故事，然后一整个午睡期间都梦到阴沉冰冷的海底煤矿。</p>
           <p>我至今都不能准确流利地说出那个加拿大作者的姓名叫什么，除非预先演练过。这样很容易被认为对他喜欢得不够深，或许确实，很多时候我说爱一些人，都只是有所保留地爱一小部分。我会自己去形容，这是一种自私的爱意，而我也时常感到，人们的心灵或多或少是被这种情感所包裹着。</p><br>
         </div>
