--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>排球少年</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
-              <div class="w3-center w3-text-white">永远喜欢小排球！</div>
+              <div class="w3-center w3-text-white">永远喜欢小排球</div>
             </div>
           </div>
           <p>全职猎人</p>
