--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-         <img src="https://imgloc.com/i/inhzlz" style="width:100%" alt="Avatar">
+         <img src="https://img1.imgtp.com/2023/03/28/XwGqqkF0.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Nathan Wu</h2>
           </div>
